--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -411,199 +411,19 @@
        }
       }     
     }
-  } 
-
-  // .examples {
-  //   padding-top: 0;
-  //   .h3 {
-  //     text-align: center;
-  //     margin-bottom: 60px;
-  //   }
-  //   .row + .row {
-  //     margin-top: 32px;
-  //   }
-  //   .examples-wrapper {
-  //     margin-bottom: 60px;
-  //     &.aside {
-  //       margin-bottom: 0;
-  //     }
-  //     &.margin {
-  //       margin-bottom: 60px;
-  //     }
-  //     .example {
-  //       background-color: #FFF;
-  //       border-radius: 12px;
-  //       overflow: hidden;
-  //       box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
-  //       margin-bottom: 32px;
-  //       height: calc(100% - 32px);
-
-  //       &.horizontal {
-  //         margin-bottom: 0;
-  //         height: 100%;
-  //         .example-text {
-  //           padding-top: 36px;
-  //           padding-bottom: 26px;          
-  //           padding-left: 38px;
-  //           padding-right: 38px;
-  //           .description {
-  //             height: 238px;
-  //             p {
-  //               margin-bottom: 0;
-  //               @include fz(16);
-  //               line-height: 156.25%;            
-  //               @include ls(0.16);
-  //               &:first-child {
-  //                 @include fz(20);               
-  //                 font-weight: 500;
-  //                 line-height: 140%;
-  //                 margin-bottom: 14px;
-  //               }
-  //             }
-  //             // .title {
-  //             //   @include fz(20);               
-  //             //   font-weight: 500;
-  //             //   line-height: 140%;
-  //             //   margin-bottom: 14px;
-  //             // }
-  //           }
-  //           .executor-name {
-  //             @include fz(18);          
-  //             @include ls(0.54);
-  //           }
-
-  //         }
-  //         .example-images {
-  //           .before, .after {
-  //             width: 380px;
-  //           }
-  //         }
-  //       }
-
-  //       &-images {
-  //         .before {
-  //           margin-bottom: 2px;
-  //         }
-  //         .before, .after {
-  //           height: 188px;
-  //           width: 386px;
-  //           img {
-  //             width: 100%;
-  //             height: 100%;
-  //             object-fit: cover;
-  //             object-position: center;
-  //           }
-  //         }
-  //       }
-
-  //       &-text {
-  //         padding: 24px;
-
-  //         .description {
-  //           color: $gray_dark;
-  //           @include fz(17);           
-  //           font-weight: 400;
-  //           line-height: 129.412%;
-  //           padding-bottom: 22px;
-  //           margin-bottom: 24px;
-  //           height: 136px;
-  //           overflow: auto;
-  //           border-bottom: 2px solid $bgc;
-  //           p {
-  //             margin: 0;
-  //           }
-  //         }
-
-  //         .executor + .executor {
-  //           margin-top: 3px;
-  //         }
-  //         .executor {
-  //           &-title {
-  //             color: $primary;
-  //             @include fz(16);  
-  //             line-height: 1;           
-  //             font-weight: 400;          
-  //             @include ls(0.48);
-  //             margin-bottom: 2px;
-  //             overflow: hidden;
-  //             text-overflow: ellipsis;
-  //             white-space: nowrap;
-  //             display: inline-block;
-  //             width: 100%;
-  //             p {
-  //               margin: 0;
-  //             }
-  //           }
-  //           &-name {
-  //             color: $font;
-  //             @include fz(16);               
-  //             font-weight: 600;
-  //             line-height: 1;          
-  //             @include ls(0.48);
-  //             overflow: hidden;
-  //             text-overflow: ellipsis;
-  //             white-space: nowrap;
-  //             display: inline-block;
-  //             width: 100%;
-
-  //             &:hover {
-  //               color: $bgc-pink;
-  //             }
-  //           }
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
-
-  // .implants {   
-  //   padding-bottom: 60px;
-  //   .h4 {     
-  //     text-align: center;
-  //     margin-left: auto;
-  //     margin-right: auto;
-  //     @include fz(24);     
-  //     font-weight: 600;
-  //     line-height: 133.333%;
-  //     max-width: 790px;
-  //     margin-bottom: 60px;
-  //   }
-
-  //   &-slider {
-  //     &-item {
-  //       width: 512px;
-  //       height: 340px;
-  //       border-radius: 12px;
-  //       overflow: hidden;
-  //       box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
-
-  //       img {
-  //         width: 100%;
-  //         height: 100%;
-  //         object-fit: cover;
-  //         object-position: center;
-  //       }
-  //     }
-  //   }
-  // }
-
-  // articles
-
-  .articles {
-
-    .h3 {
-      text-align: center;
-      margin-bottom: 60px;
-    }
-
-    &-wrapper {
-      margin-bottom: 28px;
-    }
   }  
 }
 
+// articles
+
+.articles {
+  &-wrapper {
+    margin-bottom: 28px;
+  }
+}  
+
 // services page
-.services-page {    
+.section-services {    
   padding-bottom: 48px;  
 }
 
@@ -789,9 +609,10 @@
   }
 }
 
-.prices {
+.section-prices {
   padding-top: 110px;
-  
+}
+.prices {  
   .row {
     margin-left: -40px;
     margin-right: -40px;
@@ -868,10 +689,11 @@
   }
 }
 
-.portfolio {
+.section-portfolio {
   text-align: center;
-  padding-top: 95px;    
-
+  padding-top: 95px;
+}
+.portfolio {
   &-text {
     display: inline-block;
     color: $gray_dark;
@@ -896,9 +718,11 @@
   }
 }
 
-.works {
-  padding-top: 0px;
+.section-works {
+  padding-top: 0;
+}
 
+.works {
   &-wrapper {
     margin-bottom: 28px;
   }
@@ -1062,57 +886,11 @@
   }
 }
 
-// .price-row {
-//   @include fz(20);
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   padding: 16px 19px;
-//   cursor: pointer;
-//   transition: all 0.5s;
-
-//   &:hover {
-//     background-color: $primary;
-//     color: #fff;
-//     border-radius: 12px;
-
-//     .name {
-//       color: #fff;
-//     }
-//     .price {
-//       color: #fff;
-//     }
-//   }
-
-//   &:hover .name a {    
-//     color: #fff;      
-//   }
-
-//   &:not(:last-of-type) {
-//     border-bottom: 2px solid $bgc;
-//   }
-
-//   .name, .name a {
-//     color: $font;
-//     @include fz(20);
-//     font-weight: 400;
-//     @include ls(0.2);
-//     line-height: 155%;
-//     transition: all 0.5s    
-//   }    
-
-//   .price {
-//     @include fz(20);
-//     font-weight: 600;      
-//     line-height: 155%;
-//     @include ls(0.2);
-//     color: $bgc_pink;
-//     white-space: nowrap;
-//     transition: all 0.5s
-//   }
-// }
-
 // service
+
+.section-article {
+  padding-bottom: 62px;
+}
 .service-content {
   padding-bottom: 62px;
 }
@@ -1536,10 +1314,10 @@
 }
 
 // implants
-
-.implants {   
+.section-implants {
   padding-bottom: 60px;
-
+}
+.implants {
   &-title {
     text-align: center;
     margin-left: auto;
@@ -1570,10 +1348,10 @@
 }
 
 // examples
-
-.examples {
+.section-examples {
   padding-top: 0;
-
+}
+.examples {
   &-wrapper {
     margin-bottom: 28px;
     &.aside {
@@ -1939,8 +1717,6 @@
 
 // main services section
 .services {
-  padding-bottom: 82px;
-
   &-title {
     text-align: center;
     margin-bottom: 60px;
@@ -2484,9 +2260,10 @@
 }
 
 // contacts
-.contacts {  
-  padding-bottom: 0px;  
-
+.section-contacts {
+  padding-bottom: 0;
+}
+.contacts {
   &-banner {  
     color: $font;    
   }
@@ -2924,9 +2701,11 @@
   }
 }
 
-.diploms { 
+.section-diploms {
   padding-bottom: 38px;
+}
 
+.diploms {
   &-title {
     @include fz(24);
     text-align: center;
@@ -3483,4 +3262,27 @@
 
 .labels {
   background-color: #319DAC;
+}
+
+.reviews-slider__vertical {
+  height: 945px;
+  // padding-bottom: 76px;
+  .swiper-slide {
+    height: auto;
+  }
+}
+
+.vertical-arrows {
+  transform: rotate(90deg) translateX(-50%);
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  z-index: 1;
+  &-prev {
+    cursor: pointer;   
+  }
+  &-next {
+    cursor: pointer;   
+  }
 }
