--- a/src/css/style.css
+++ b/src/css/style.css
@@ -405,6 +405,13 @@ article {
   line-height: 155.556%;
   color: #343544;
 }
+article img {
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+article video {
+  width: 100%;
+}
 
 p {
   margin: 0px 0px 18px;
@@ -591,7 +598,7 @@ h4, .h4, .ui-h4 {
   text-transform: uppercase;
   font-weight: 600;
   line-height: 133.333%;
-  letter-spacing: 0.045rem;
+  letter-spacing: 0.043125rem;
   padding-top: 34px;
   padding-bottom: 14px;
 }
@@ -997,13 +1004,15 @@ b, strong {
   font-weight: 500;
   letter-spacing: 0.045rem;
   display: block;
-  width: 62px;
+  min-width: 62px;
   height: 62px;
-  padding: 20px;
+  line-height: 62px;
+  padding-left: 6px;
+  padding-right: 6px;
   border-radius: 50%;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: color 0.5s, background-color 0.5s;
+  -o-transition: color 0.5s, background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s;
 }
 .pagination-item-link:hover {
   background-color: #319DAC;
@@ -2342,9 +2351,9 @@ b, strong {
   border-radius: 12px;
   -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: visibility 0.5s, translate 0.5s;
+  -o-transition: visibility 0.5s, translate 0.5s;
+  transition: visibility 0.5s, translate 0.5s;
 }
 .header-bottom-nav .search-wrapper.open {
   visibility: visible;
@@ -2447,9 +2456,11 @@ b, strong {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-left: 6px;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 .header-bottom nav > ul:first-child li ul {
   background-color: #fff;
@@ -2516,12 +2527,11 @@ b, strong {
 }
 .header-bottom nav > ul:first-child li ul li ul li a {
   width: 100%;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
   text-transform: unset;
   padding-left: 40px;
-  transition: all 0.5s;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  -o-transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.5s, color 0.5s;
 }
 .header-bottom nav > ul:first-child li ul li ul li:hover a {
   background-color: #319DAC;
@@ -2537,9 +2547,9 @@ b, strong {
 }
 .header-bottom nav > ul > li > ul li a {
   width: 100%;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  -o-transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.5s, color 0.5s;
 }
 .header-bottom nav > ul > li > ul li:hover > a {
   background-color: #319DAC;
@@ -2551,9 +2561,9 @@ b, strong {
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: width 0.5s, height 0.5s, opacity 0.5s;
+  -o-transition: width 0.5s, height 0.5s, opacity 0.5s;
+  transition: width 0.5s, height 0.5s, opacity 0.5s;
   top: 50px;
   z-index: 2;
   height: 0;
@@ -2673,7 +2683,7 @@ b, strong {
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   margin-bottom: 32px;
 }
-.service-card.simple {
+.service-card:last-child {
   padding-bottom: 20px;
 }
 .service-card-head {
@@ -2699,6 +2709,8 @@ b, strong {
 .service-card-head svg {
   width: 68px;
   height: 68px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 .service-card-head svg path {
   -webkit-transition: fill 0.3s, stroke 0.3s;
@@ -2728,9 +2740,6 @@ b, strong {
   letter-spacing: 0.0125rem;
   padding: 11px 20px;
   display: inline-block;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
   border-radius: 12px;
 }
 .service-card-list ul li a:hover {
@@ -2998,6 +3007,7 @@ b, strong {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 12px;
   padding: 11px 20px;
   border-radius: 12px;
   cursor: pointer;
@@ -3334,41 +3344,8 @@ b, strong {
 .service-content-addition p:not(:last-child) {
   margin-bottom: 16px;
 }
-.service-content-image {
-  margin-bottom: 16px;
-}
-.service-content-image img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-}
 .service-content-item:not(:last-child) {
   margin-bottom: 50px;
-}
-.service-block {
-  margin-top: 50px;
-}
-.service-video-title {
-  font-size: 24px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  line-height: 133.333%;
-  text-transform: uppercase;
-  letter-spacing: 0.045rem;
-  margin-bottom: 20px;
-}
-.service-video-wrapper {
-  margin-bottom: 16px;
-}
-.service-video video {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  max-height: 472px;
-  display: block;
 }
 .service-interwiev {
   background-color: #FFF;
@@ -3376,6 +3353,7 @@ b, strong {
   -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   padding: 40px;
+  margin-top: 50px;
   margin-bottom: 16px;
 }
 .service-interwiev-wrapper {
@@ -3440,6 +3418,9 @@ b, strong {
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   padding: 20px 20px 40px;
 }
+.service-price__article {
+  margin-top: 50px;
+}
 .service-price.single {
   margin-bottom: 71px;
 }
@@ -3472,8 +3453,10 @@ b, strong {
   margin-bottom: 24px;
 }
 .service-price-row {
-  font-size: 20px;
-  font-size: 1.25rem;
+  font-size: 18px;
+  font-size: 1.125rem;
+  letter-spacing: 0.0225rem;
+  line-height: 135%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3483,11 +3466,12 @@ b, strong {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 16px 19px;
+  gap: 12px;
+  padding: 17px 19px;
   cursor: pointer;
-  -webkit-transition: background-color 0.5s;
-  -o-transition: background-color 0.5s;
-  transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  -o-transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.5s, color 0.5s;
 }
 .service-price-row:hover {
   background-color: #319DAC;
@@ -3504,26 +3488,15 @@ b, strong {
 }
 .service-price-name {
   color: #222340;
-  font-size: 20px;
-  font-size: 1.25rem;
   font-weight: 400;
-  letter-spacing: 0.0125rem;
-  line-height: 155%;
-  -webkit-transition: color 0.5s;
-  -o-transition: color 0.5s;
-  transition: color 0.5s;
 }
 .service-price-sum {
   font-size: 20px;
   font-size: 1.25rem;
+  letter-spacing: 0.0225rem;
   font-weight: 600;
-  line-height: 155%;
-  letter-spacing: 0.0125rem;
   color: #BD5B9E;
   white-space: nowrap;
-  -webkit-transition: color 0.5s;
-  -o-transition: color 0.5s;
-  transition: color 0.5s;
 }
 .service-price-all {
   text-align: right;
@@ -3757,7 +3730,8 @@ b, strong {
   background-color: #FFF;
   -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
-  height: 207px;
+  min-height: 207px;
+  height: calc(100% - 32px);
   overflow: hidden;
   margin-bottom: 32px;
 }
@@ -3872,8 +3846,6 @@ b, strong {
 .article-title {
   border-bottom: 2px solid #CDF3F9;
   margin-bottom: 24px;
-  overflow: auto;
-  max-height: 82px;
   color: #222340;
   font-size: 20px;
   font-size: 1.25rem;
@@ -4467,6 +4439,8 @@ b, strong {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 49px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -4571,15 +4545,6 @@ b, strong {
   text-transform: uppercase;
   margin-bottom: 32px;
 }
-.requisites-text-name {
-  color: #343544;
-  font-size: 18px;
-  font-size: 1.125rem;
-  font-weight: 500;
-  line-height: 155.556%;
-  letter-spacing: 0.0225rem;
-  margin-bottom: 20px;
-}
 .requisites-text p {
   color: #343544;
   font-size: 18px;
@@ -4627,7 +4592,6 @@ b, strong {
   color: #fff;
 }
 .requisites-files-item:hover svg {
-  display: block;
   width: 24px;
   margin-left: 20px;
 }
@@ -4638,17 +4602,11 @@ b, strong {
   font-weight: 400;
   line-height: 155%;
   letter-spacing: 0.0125rem;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 .requisites-files-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   color: #343544;
   text-align: right;
   font-size: 18px;
@@ -4658,16 +4616,18 @@ b, strong {
   margin-left: auto;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 .requisites-files-info svg {
   width: 0;
   height: 24px;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: width 0.5s;
+  -o-transition: width 0.5s;
+  transition: width 0.5s;
+  display: inline-block;
+  vertical-align: middle;
 }
 .requisites-files-title {
   color: #222340;
@@ -4682,6 +4642,8 @@ b, strong {
 }
 .requisites-files-weight {
   margin-left: 20px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .accordion-head {
@@ -4751,9 +4713,9 @@ b, strong {
 .accordion-content {
   max-height: 0;
   overflow: hidden;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: max-height 0.5s;
+  -o-transition: max-height 0.5s;
+  transition: max-height 0.5s;
 }
 .accordion-content.open {
   max-height: -webkit-max-content;
@@ -4853,19 +4815,21 @@ b, strong {
   margin-bottom: 32px;
 }
 .education-card-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom: 2px solid #319DAC;
   padding: 20px;
 }
 .education-card-icon {
   width: 68px;
   height: 68px;
-  display: inline-block;
-  vertical-align: middle;
   margin-right: 20px;
 }
 .education-card-title {
-  display: inline-block;
-  vertical-align: middle;
   font-size: 24px;
   font-size: 1.5rem;
   font-weight: 600;
@@ -4895,6 +4859,9 @@ b, strong {
   line-height: 140%;
   margin-right: 30px;
   max-width: 50px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
 }
 .education-card-info {
   display: inline-block;
