--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -61,12 +61,12 @@ article {
 	line-height: 155.556%;
   color: $gray_dark;
 
-  img {
+  & > img {
     margin-top: 32px;
     margin-bottom: 8px;
   }
 
-  video {   
+  & > video {   
     width: 100%;
   }
 }
