--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -34,7 +34,7 @@ $block_margin: 0 0 25px;
 
 
 // Grid
-$breakpoints: ("xl":1440,"lg":1260,"md":1024,"sm":769,"xs":599,"us":320);
+$breakpoints: ("xl":1440,"lg":1260,"md":1024,"m": 993,"sm":769,"xs":599,"us":320);
 
 
 // Typography ---
